<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>nl.naturalis.common</groupId>
    <artifactId>naturalis-common</artifactId>
    <version>2.1</version>

    <name>Naturalis Java Utility Library</name>
    <description>Naturalis Java Utility Library</description>

    <properties>

		<!-- ==================================================================== -->
		<!-- *** Build settings                                               *** -->
		<!-- ==================================================================== -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<!-- ==================================================================== -->
		<!-- *** Maven plugin versions                                        *** -->
		<!-- *** Check for updates: mvn versions:display-plugin-updates       *** -->
		<!-- ==================================================================== -->
        <maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
        <maven-dependency-plugin.version>3.1.1</maven-dependency-plugin.version>
        <maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
        <git-commit-id-plugin.version>4.0.0</git-commit-id-plugin.version>

		<!-- ==================================================================== -->
		<!-- *** Library dependencies                                         *** -->
		<!-- *** Check for updates: mvn versions:display-dependency-updates   *** -->
		<!-- *** Check dependencies: mvn dependency:analyze                   *** -->
		<!-- ==================================================================== -->
        <junit.version>4.13</junit.version>


    </properties>


    <organization>
        <name>Naturalis Biodiversity Center</name>
        <url>http://www.naturalis.nl</url>
    </organization>


    <distributionManagement>
        <repository>
            <id>naturalis</id>
            <url>http://mvnrepository.naturalis.io:8081/repository/naturalis/</url>
        </repository>
        <snapshotRepository>
            <id>naturalis</id>
            <url>http://mvnrepository.naturalis.io:8081/repository/naturalis/</url>
        </snapshotRepository>
    </distributionManagement>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
                <filtering>true</filtering>
            </testResource>
        </testResources>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>${maven-enforcer-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>${maven-dependency-plugin.version}</version>
                    <!-- following is needed until 3.1.2 is released -->
                    <dependencies>
                        <dependency>
                            <groupId>org.apache.maven.shared</groupId>
                            <artifactId>maven-dependency-analyzer</artifactId>
                            <version>1.11.1</version>
                        </dependency>
                    </dependencies>
                </plugin>
                <plugin>
                    <groupId>pl.project13.maven</groupId>
                    <artifactId>git-commit-id-plugin</artifactId>
                    <version>${git-commit-id-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <executions>
                    <execution>
                        <id>enforce-versions</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>[3.6.3,)</version>
                                </requireMavenVersion>
                                <requireJavaVersion>
                                    <version>[11,)</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>pl.project13.maven</groupId>
                <artifactId>git-commit-id-plugin</artifactId>
                <configuration>
                    <dotGitDirectory>${project.basedir}/../.git</dotGitDirectory>
                    <generateGitPropertiesFile>true</generateGitPropertiesFile>
                    <generateGitPropertiesFilename>
                        ${project.build.outputDirectory}/${project.artifactId}.git.properties
                    </generateGitPropertiesFilename>
                    <format>properties</format>
                    <dateFormat>yyyy-MM-dd HH:mm:ss</dateFormat>
                </configuration>
                <executions>
                    <execution>
                        <id>generate-git-properties</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>revision</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <showDeprecation>true</showDeprecation>
                    <release>11</release>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
